<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Function FIRST</string>
    <string name="title_activity_scout">RobotPI</string>
    <string name="title_activity_coach">USS FRC</string><string name="action_go_to_match">Go To Match</string>
    <string name="action_set_device">Set Device Number</string>
    <string name="action_settings">Settings</string>
    <string name="title_app">Function FIRST</string>
    <string name="title_season">For FRC Season 2014: Aerial Assist</string>
    <string name="title_developer">Designed by FRC Team 701: The RoboVikes</string>
    <string name="version_number">Version 1.0</string>
    <string name="team_number">Team to Scout</string>
    <string name="device_number">RoboVikes1</string>
    <string name="match_number">Match to Scout</string>
    <string name="button_scout">RobotPI (Scout)</string>
    <string name="button_stratMats">USS FRC (Drive Coach Assistant)</string>
    <string name="button_about">About</string>
    <string name="button_nextMatch">Continue to Next Match</string>
    <string name="button_undo">UNDO</string>
    <string name="button_finish">Finish</string>
    <string name="check_hadAuto">Had Auto?</string>
    <string name="check_mobilityBonus">Obtained Mobility Bonus?</string>
    <string name="check_goalieZone">Robot Started in Goalie Zone?</string>
    <string name="check_broken">Broke Down During Match?</string>
    <string name="check_disabled">Disabled During Match?</string>
    <string name="check_yellowCard">Received Yellow Card?</string>
    <string name="check_redCard">Received Red Card?</string>
    <string name="check_defensive">Played Defensively?</string>
    <string name="radio_truss">Truss</string>
    <string name="radio_catch">Catch</string>
    <string name="radio_lowGoal">Low Goal</string>
    <string name="radio_highGoal">High Goal</string>
    <string name="radio_none">None</string>
    <string name="title_highScore">Number of Balls Scored in High Goals</string>
    <string name="title_lowScore">Number of Balls Scored in Low Goals</string>
    <string name="title_hotScore">Number of Balls Scored in Hot Goals</string>
    <string name="title_cycleGrid">Cycle Number</string>
    <string name="title_partner">Partner Team #</string>
    <string name="title_team">Team #</string>
    <string name="title_numberCycles">Number of Cycles: </string>
    <string name="title_numberHighScores">Number of High Scores: </string>
    <string name="title_numberLowScores">Number of Low Scores: </string>
    <string name="title_numberTrussScores">Number of Truss Scores:</string>
    <string name="title_numberCatchScores">Number of Catch Scores: </string>
    <string name="title_possessionTime">Possession Time: </string>
    <string name="title_regFouls">Number of Regular Fouls Incurred</string>
    <string name="title_techFouls">Number of Technical Fouls Incurred</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_catch">Catch</string>
    <string name="button_truss">Truss Shot</string>
    <string name="button_score">Score</string>
    <string name="button_defense">Play Defense</string>
    <string name="descFieldDiagram">Field Diagram to draw on</string>
    <string name="editMatchNumber">Enter Match Number</string>
    <string name="button_redo">REDO</string>
    <string name="button_export">EXPORT</string>
    <string name="team_red1">R 1</string>
    <string name="team_red2">R 2</string>
    <string name="team_red3">R 3</string>
    <string name="team_blue1">B 1</string>
    <string name="team_blue2">B 2</string>
    <string name="team_blue3">B 3</string>

</resources>
