<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/version_number" />

    <TextView
        android:id="@+id/developerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/versionText"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/title_developer" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:text="@string/title_app" />

    <TextView
        android:id="@+id/seasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:text="@string/title_season" />

    <Button
        android:id="@+id/scoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutButton"
        android:layout_below="@+id/seasonText"
        android:onClick="goTo_scoutActivity"
        android:text="@string/button_scout" />

    <Button
        android:id="@+id/stratButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scoutButton"
        android:text="@string/button_stratMats"
        android:onClick="goTo_coachActivity" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stratButton"
        android:layout_centerHorizontal="true"
        android:onClick="showAbout"
        android:text="@string/button_about" />

</RelativeLayout>
