<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoutActivity$PostFragment" >

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:textSize="24sp"
            android:text="@string/title_regFouls" />

        <EditText
            android:id="@+id/postRegFouls"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:textSize="24sp"
            android:text="@string/title_techFouls" />

        <EditText
            android:id="@+id/postTechFouls"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout5" >

        <CheckBox
            android:id="@+id/postDisabled"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/check_disabled" />

        <CheckBox
            android:id="@+id/postBroken"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/check_broken" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout6"
        android:layout_below="@+id/linearLayout6"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/postYellowCard"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/check_yellowCard" />

        <CheckBox
            android:id="@+id/postRedCard"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:textSize="24sp"
            android:text="@string/check_redCard" />
    </LinearLayout>
    	
  	<CheckBox
        android:id="@+id/postDefensive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout7"
        android:layout_below="@+id/linearLayout7"
        android:textSize="24sp"
        android:text="@string/check_defensive" />
	
    <Button
        android:id="@+id/buttonNextMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="28sp"
        android:onClick="goTo_nextMatch"
    	android:text="@string/button_nextMatch" />

</RelativeLayout>