<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cycleGrid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border" >

    <TextView
        android:id="@+id/titleCycleGrid"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/title_cycleGrid" />
    
    <Button
        android:id="@+id/buttonLastCycle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/titleCycleGrid"
        android:layout_marginRight="5dp"
        android:background="@drawable/arrow_button"
        android:rotation="270" />
    
    <Button
        android:id="@+id/buttonNextCycle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/titleCycleGrid"
        android:layout_marginLeft="5dp"
        android:background="@drawable/arrow_button"
        android:rotation="90" />

    <TextView
        android:id="@+id/titleTeam"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleCycleGrid"
        android:layout_centerHorizontal="true"
        android:text="@string/title_team" />
    
    <TextView
        android:id="@+id/titlePartner1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleCycleGrid"
        android:layout_toLeftOf="@+id/titleCycleGrid"
        android:text="@string/title_partner" />

    <TextView
        android:id="@+id/titlePartner2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleCycleGrid"
        android:layout_toRightOf="@id/titleCycleGrid"
        android:text="@string/title_partner" />

    <com.vandenrobotics.functionfirst.views.GridBox
        android:id="@+id/gridBox"
        android:layout_width="300dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/titleTeam"
        android:background="@drawable/grid_box" />

</RelativeLayout>